laravel-app/k8s/deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-web
  labels:
    app: laravel-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel-web
  template:
    metadata:
      labels:
        app: laravel-web
    spec:
      containers:
        - name: app
          image: laravel-app-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
        - name: nginx
          image: laravel-app-nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-config
          configMap:
            name: laravel-nginx-config
